@@ -1,1 +1,7 @@
-Known bugs- 
+Known bugs:
+- Any symbol input after a first symbol input causes an error.
+- Hitting = after a number has been calculated only concatenates the number onto itself. 
+- Pressing any symbol after a calculation causes an error. 
+- Negative numbers show their symbol on the right, rather than the left. 
+- Attempting to do an operation following a previous, uncleared operation does not work.
+	The second number remains the same, and the output is changed based only on the second number.
